* Removed all in-line stylings from AddTestView * Removed all in-line stylings from Archive * Removed all in-line stylings from Details * Removed all in-line stylings from Pickwinner * Fixed error in assigning starting visibility for error thumbnail in details * Added css classes for all stylings removed.

--- a/src/EPiServer.Marketing.Testing.Web/ClientResources/css/ABTesting.css
+++ b/src/EPiServer.Marketing.Testing.Web/ClientResources/css/ABTesting.css
@@ -65,6 +65,10 @@
         font-weight: bold;
     }
 
+    .cardBody-bottom {
+        padding-bottom: 0px;
+    }
+
 .contentInfo {
     text-align: center;
     padding: 16px 32px;
@@ -322,16 +326,21 @@
     display: block;
 }
 
-.epi-abtest-thumbnail-hidden {
+.epi-abtest-hidden {
     display: none;
 }
 
-.epi-abTest-weightSelectors-margin {
-    margin-left: 25px;
+.epi-abtest-thumbnail-container {
+    width:100%;
+    height:100%;
 }
 
 .epi-abtest-thumbnail--losing {
     opacity: .4;
+}
+
+.epi-abTest-weightSelectors-margin {
+    margin-left: 25px;
 }
 
 .epi-abTest-summaryToggle {
@@ -423,8 +432,63 @@
     font-weight: bold;
 }
 
-.epi-abtest-spacing-narrow {
-    margin-bottom: 2px;
+.epi-abtest-clear{
+    clear:both;
+}
+
+.epi-abtest-pointer{
+    cursor: pointer;
+}
+
+.epi-abtest-buttonRow {
+    float: left; 
+    padding-right: 20px; 
+    vertical-align: text-bottom;
+}
+
+.epi-abtest-middle {
+    vertical-align: middle;
+}
+
+.epi-abtest-narrow-btm {
+    margin-bottom:2px;
+}
+
+.epi-abtest-narrow-top {
+    margin-top:2px;
+}
+
+.epi-abtest-moderate-top {
+    margin-top:4px;
+}
+
+.epi-abtest-fontLarge {
+    font-size:18px;
+}
+
+.epi-abtest-progress {
+    width:35%;
+}
+
+.epi-abtest-bottom-fill{
+    margin-bottom: 114px;
+}
+
+.epi-abtest-button-advanced {
+  background-color: #ffffff; 
+  font-size: 18px; 
+  margin: 8px 0 0 0; 
+  font-family: arial; 
+  font-weight: bold;
+}
+
+.epi-padding-top-medium {
+    padding-top: 10px;
+}
+
+.epi-abtest-status {
+    color: #777; 
+    font-weight: normal;
 }
 
 @media screen and (max-width: 900px) {
@@ -513,6 +577,4 @@
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
 }
-
-
 /* end Throbber classes*/
